# hse-algorithms-lab2

./: .clang-format  .clang-tidy  .gitignore  README.md  lab2.cpp  meson.build
src/: common.hpp
src/benchmarks/: Benchmark.cpp  TestCaseGenerator.hpp
src/models/: Rectangle.hpp  Vec2d.hpp
src/solutions/: BruteForceSolution.hpp  MapSolution.hpp  PersistentSegmentTreeSolution.hpp  Solution.hpp
